--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,12 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.14.0
+  table_calendar: ^3.2.0
 
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
+  flutter_local_notifications: ^19.5.0
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_test:
