--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   timezone: ^0.10.1
 
+  firebase_core: ^3.4.1
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.5.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
