--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_picker: ^1.2.1
   firebase_storage: ^12.4.10
   provider: ^6.1.5+1
+  app_links: ^7.0.0
 
 dev_dependencies:
   flutter_test:
